Fix sortable placeholder too tall

--- a/ucms_contrib/ucms_contrib.css
+++ b/ucms_contrib/ucms_contrib.css
@@ -182,7 +182,7 @@ body [data-region].drop-highlighted-over {
   background: rgba(1, 143, 226, .75);
   margin: 5px;
   border-radius: 10px;
-  height: 100px;
+  height: 70px;
 }
 
 /* Fix fucking bootstrap banner */
